fixing bug and updting config with new docsets

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -9,10 +9,22 @@ base_path: ../../../public/docs/
 debugMode: True
 [javascript]
 name: JavaScript
-default_uri: /javascript/
+default_uri: /javascript/statements
 [css]
 name: CSS
-default_uri: /css/
+default_uri: /css/universal_selectors
 [dom]
 name: DOM
-default_uri: /dom/
+default_uri: /dom/document
+[html]
+name: HTML
+default_uri: /html/element
+[svg]
+name: SVG
+default_uri: /svg/element
+[xpath]
+name: XPath
+default_uri: /xpath/
+[dom_events]
+name: DOM Events
+default_uri: /dom_events/click
