--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -31,3 +31,21 @@ default_uri: /dom_events/click
 [react]
 name: React
 default_uri: /react/
+[c]
+name: C
+default_uri: /c/
+[express]
+name: Express
+default_uri: /express/
+[ruby]
+name: Ruby
+default_uri: /ruby/
+[underscore]
+name: Underscore.js
+default_uri: /underscore/
+[git]
+name: Git
+default_uri: /git/
+[postgresql]
+name: PostgreSQL
+default_uri: /postgresql/
