--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -10,6 +10,9 @@ debugMode: True
 [javascript]
 name: JavaScript
 default_uri: /javascript/statements
+[php]
+name: PHP
+default_uri: /php/
 [css]
 name: CSS
 default_uri: /css/universal_selectors
@@ -49,3 +52,9 @@ default_uri: /git/
 [postgresql]
 name: PostgreSQL
 default_uri: /postgresql/
+[angular]
+name: Angular.js
+default_uri: /angular/
+[backbone]
+name: Backbone.js
+default_uri: /backbone/
