--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -58,3 +58,6 @@ default_uri: /angular/
 [backbone]
 name: Backbone.js
 default_uri: /backbone/
+[cordova]
+name: Apache Cordova
+default_uri: /cordova/
