--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -64,3 +64,12 @@ default_uri: /cordova/
 [d3]
 name: D3
 default_uri: /d3/
+[bower]
+name: Bower
+default_uri: /bower/
+[coffeescript]
+name: CoffeeScript
+default_uri: /coffeescript/
+[chai]
+name: Chai
+default_uri: /chai/
