added GO docset

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -76,3 +76,9 @@ default_uri: /chai/
 [ember]
 name: Ember.js
 default_uri: /ember/
+[go]
+name: Go
+default_uri: /go/
+[node]
+name: Node.js
+default_uri: /nodejs/
