--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -91,3 +91,9 @@ default_uri: /requirejs/
 [markdown]
 name: MarkDown
 default_uri: /markdown/
+[grunt]
+name: Grunt
+default_uri: /grunt/
+[less]
+name: Less
+default_uri: /less/
