added Mongoose docset

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -109,3 +109,12 @@ default_uri: /sass/
 [haskell]
 name: Haskell
 default_uri: /haskell/
+[yii]
+name: Yii
+default_uri: /yii/
+[jquery]
+name: JQuery
+default_uri: /jquery/
+[mongoose]
+name: Mongoosejs
+default_uri: /mongoose/
