--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -118,3 +118,6 @@ default_uri: /jquery/
 [mongoosejs]
 name: MongooseJS
 default_uri: /mongoosejs/
+[rethinkdb]
+name: RethinkDB
+default_uri: /rethinkdb/
