added jquery mobile y jquery UI docsets

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -34,9 +34,6 @@ default_uri: /dom_events/click
 [react]
 name: React
 default_uri: /react/
-[c]
-name: C
-default_uri: /c/
 [express]
 name: Express
 default_uri: /express/
@@ -115,6 +112,12 @@ default_uri: /yii/
 [jquery]
 name: JQuery
 default_uri: /jquery/
+[jqueryui]
+name: JQuery UI
+default_uri: /jqueryui/
+[jquerymobile]
+name: JQuery Mobile
+default_uri: /jquerymobile/
 [mongoosejs]
 name: MongooseJS
 default_uri: /mongoosejs/
