added sinonjs docset

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -124,3 +124,6 @@ default_uri: /mongoosejs/
 [rethinkdb]
 name: RethinkDB
 default_uri: /rethinkdb/
+[sinon]
+name: SinonJS
+default_uri: /sinonjs/
