--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -37,24 +37,18 @@ default_uri: /react/
 [express]
 name: Express
 default_uri: /express/
-[ruby]
-name: Ruby
-default_uri: /ruby/
 [underscore]
-name: Underscore.js
-default_uri: /underscore/
+name: UnderscoreJS
+default_uri: /underscorejs/
 [git]
 name: Git
 default_uri: /git/
 [postgresql]
 name: PostgreSQL
 default_uri: /postgresql/
-[angular]
-name: Angular.js
-default_uri: /angular/
 [backbone]
-name: Backbone.js
-default_uri: /backbone/
+name: BackboneJS
+default_uri: /backbonejs/
 [cordova]
 name: Apache Cordova
 default_uri: /cordova/
@@ -64,9 +58,6 @@ default_uri: /d3/
 [bower]
 name: Bower
 default_uri: /bower/
-[coffeescript]
-name: CoffeeScript
-default_uri: /coffeescript/
 [chai]
 name: Chai
 default_uri: /chai/
@@ -77,7 +68,7 @@ default_uri: /ember/
 name: Go
 default_uri: /go/
 [node]
-name: Node.js
+name: NodeJS
 default_uri: /nodejs/
 [nginx]
 name: Nginx
