fixed defaults_uri and types

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -12,7 +12,7 @@ name: JavaScript
 default_uri: /javascript/statements
 [php]
 name: PHP
-default_uri: /php/
+default_uri: /php/class.arrayaccess
 [css]
 name: CSS
 default_uri: /css/universal_selectors
@@ -21,100 +21,100 @@ name: DOM
 default_uri: /dom/document
 [html]
 name: HTML
-default_uri: /html/element
+default_uri: /html/attributes
 [svg]
 name: SVG
 default_uri: /svg/element
 [xpath]
 name: XPath
-default_uri: /xpath/
+default_uri: /xpath/functions
 [dom_events]
 name: DOM Events
 default_uri: /dom_events/click
 [react]
 name: React
-default_uri: /react/
+default_uri: /react/component-api
 [express]
 name: Express
-default_uri: /express/
+default_uri: /express/index#res.methods
 [underscore]
 name: UnderscoreJS
-default_uri: /underscorejs/
+default_uri: /underscorejs/chain#chain
 [git]
 name: Git
-default_uri: /git/
+default_uri: /git/git
 [postgresql]
 name: PostgreSQL
-default_uri: /postgresql/
+default_uri: /postgresql/manage-ag-config
 [backbone]
 name: BackboneJS
-default_uri: /backbonejs/
+default_uri: /backbonejs/index#Model-constructor
 [cordova]
 name: Apache Cordova
-default_uri: /cordova/
+default_uri: /apache-cordova/guide_overview_index.md
 [d3]
 name: D3
-default_uri: /d3/
+default_uri: /d3/arrays
 [bower]
 name: Bower
-default_uri: /bower/
+default_uri: /bower/creating-packages
 [chai]
 name: Chai
-default_uri: /chai/
+default_uri: /chai/guide/helpers
 [ember]
 name: Ember.js
-default_uri: /ember/
+default_uri: /ember/classes/ember.application
 [go]
 name: Go
-default_uri: /go/
+default_uri: /go/syscall
 [node]
 name: NodeJS
-default_uri: /nodejs/
+default_uri: /nodejs/assert
 [nginx]
 name: Nginx
-default_uri: /nginx/
+default_uri: /nginx/ngx_core_module
 [requirejs]
 name: RequireJS
-default_uri: /requirejs/
+default_uri: /requirejs/commonjs
 [markdown]
 name: MarkDown
-default_uri: /markdown/
+default_uri: /markdown/index#philosophy
 [grunt]
 name: Grunt
-default_uri: /grunt/
+default_uri: /grunt/configuring-tasks
 [less]
 name: Less
-default_uri: /less/
+default_uri: /less/functions#misc-functions-data-uri
 [phpunit]
 name: PHPUnit
-default_uri: /phpunit/
+default_uri: /phpunit/code-coverage-analysis
 [redis]
 name: Redis
-default_uri: /redis/
+default_uri: /redis/config-set
 [sass]
 name: Sass
-default_uri: /sass/
+default_uri: /sass/index#list_operations
 [haskell]
 name: Haskell
-default_uri: /haskell/
+default_uri: /haskell/list
 [yii]
 name: Yii
-default_uri: /yii/
+default_uri: /yii/yii-authclient-baseclient
 [jquery]
 name: JQuery
-default_uri: /jquery/
+default_uri: /jquery/all-selector
 [jqueryui]
 name: JQuery UI
-default_uri: /jqueryui/
+default_uri: /jqueryui/data-selector
 [jquerymobile]
 name: JQuery Mobile
-default_uri: /jquerymobile/
+default_uri: /jquerymobile/classes
 [mongoosejs]
 name: MongooseJS
-default_uri: /mongoosejs/
+default_uri: /mongoosejs/documents
 [rethinkdb]
 name: RethinkDB
-default_uri: /rethinkdb/
+default_uri: /rethinkdb/config
 [sinon]
 name: SinonJS
-default_uri: /sinonjs/
+default_uri: /sinonjs/index#assertions
