fixed breadcrumps in php

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -118,3 +118,6 @@ default_uri: /rethinkdb/config
 [sinon]
 name: SinonJS
 default_uri: /sinonjs/index#assertions
+[python2]
+name: Python2
+default_uri: /python2/
