modified link regexp and optimized process

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -12,7 +12,7 @@ name: JavaScript
 default_uri: /javascript/statements
 [php]
 name: PHP
-default_uri: /php/class.arrayaccess
+default_uri: /php/classes_and_objects/the_basics
 [css]
 name: CSS
 default_uri: /css/universal_selectors
@@ -45,7 +45,7 @@ name: Git
 default_uri: /git/git
 [postgresql]
 name: PostgreSQL
-default_uri: /postgresql/manage-ag-config
+default_uri: /postgresql/select
 [backbone]
 name: BackboneJS
 default_uri: /backbonejs/index#Model-constructor
@@ -72,10 +72,10 @@ name: NodeJS
 default_uri: /nodejs/assert
 [nginx]
 name: Nginx
-default_uri: /nginx/ngx_core_module
+default_uri: /nginx/guide/beginner’s_guide
 [requirejs]
 name: RequireJS
-default_uri: /requirejs/commonjs
+default_uri: /requirejs/commonjs_notes
 [markdown]
 name: MarkDown
 default_uri: /markdown/index#philosophy
