added tests for JS CSS DOM and PHP

--- a/lib/docs/db_storage/tests/importer.cfg
+++ b/lib/docs/db_storage/tests/importer.cfg
@@ -10,9 +10,12 @@ debugMode: True
 [javascript]
 name: JavaScript
 default_uri: /javascript/
-[css]
-name: Css
-default_uri: /css/
+[php]
+name: PHP
+default_uri: /php/
 [dom]
 name: DOM
 default_uri: /dom/
+[css]
+name: CSS
+default_uri: /css/
