--- a/lib/docs/db_storage/tests/importer.cfg
+++ b/lib/docs/db_storage/tests/importer.cfg
@@ -19,3 +19,12 @@ default_uri: /dom/
 [css]
 name: CSS
 default_uri: /css/
+[xpath]
+name: XPATH
+default_uri: /xpath/
+[svg]
+name: SVG
+default_uri: /svg/
+[html]
+name: HTML
+default_uri: /html/
