added test for links

--- a/lib/docs/db_storage/tests/importer.cfg
+++ b/lib/docs/db_storage/tests/importer.cfg
@@ -10,21 +10,39 @@ debugMode: True
 [javascript]
 name: JavaScript
 default_uri: /javascript/
-[php]
-name: PHP
-default_uri: /php/
-[dom]
-name: DOM
-default_uri: /dom/
+[bower]
+name: Bower
+default_uri: /bower/
 [css]
 name: CSS
 default_uri: /css/
-[xpath]
-name: XPATH
-default_uri: /xpath/
-[svg]
-name: SVG
-default_uri: /svg/
+[dom]
+name: DOM
+default_uri: /dom/
+[git]
+name: Git
+default_uri: /git/
 [html]
 name: HTML
 default_uri: /html/
+[nginx]
+name: Nginx
+default_uri: /nginx/
+[node]
+name: NodeJS
+default_uri: /nodejs/
+[php]
+name: PHP
+default_uri: /php/
+[postgresql]
+name: PostgreSQL
+default_uri: /postgresql/
+[react]
+name: React
+default_uri: /react/
+[svg]
+name: SVG
+default_uri: /svg/
+[xpath]
+name: XPATH
+default_uri: /xpath/
