added new tests

--- a/lib/docs/db_storage/tests/importer.cfg
+++ b/lib/docs/db_storage/tests/importer.cfg
@@ -9,16 +9,19 @@ base_path: ../../../public/docs/
 debugMode: True
 [javascript]
 name: JavaScript
-default_uri: /javascript/
+default_uri: /php/classes_and_objects/the_basics
 [bower]
 name: Bower
-default_uri: /bower/
+default_uri: /bower/creating-packages
 [css]
 name: CSS
-default_uri: /css/
+default_uri: /css/universal_selectors
+[cordova]
+name: Apache Cordova
+default_uri: /apache-cordova/
 [dom]
 name: DOM
-default_uri: /dom/
+default_uri: /dom/document
 [git]
 name: Git
 default_uri: /git/
