fixed " problems in links

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -7,117 +7,57 @@ DBname: slashdb
 base_path: ../../../public/docs/
 [Config]
 debugMode: True
-[javascript]
-name: JavaScript
-default_uri: /javascript/statements
-[php]
-name: PHP
-default_uri: /php/classes_and_objects/the_basics
-[css]
-name: CSS
-default_uri: /css/universal_selectors
-[dom]
-name: DOM
-default_uri: /dom/document
-[html]
-name: HTML
-default_uri: /html/attributes
-[svg]
-name: SVG
-default_uri: /svg/element
-[xpath]
-name: XPath
-default_uri: /xpath/functions
-[dom_events]
-name: DOM Events
-default_uri: /dom_events/click
-[react]
-name: React
-default_uri: /react/component-api
-[express]
-name: Express
-default_uri: /express/index#res.methods
-[underscore]
-name: UnderscoreJS
-default_uri: /underscorejs/chain#chain
-[git]
-name: Git
-default_uri: /git/git
-[postgresql]
-name: PostgreSQL
-default_uri: /postgresql/select
-[backbone]
-name: BackboneJS
-default_uri: /backbonejs/index#Model-constructor
-[cordova]
-name: Apache Cordova
-default_uri: /apache-cordova/guide_overview_index.md
-[d3]
-name: D3
-default_uri: /d3/arrays
 [bower]
 name: Bower
 default_uri: /bower/creating-packages
 [chai]
 name: Chai
 default_uri: /chai/guide/helpers
-[ember]
-name: Ember.js
-default_uri: /ember/classes/ember.application
-[go]
-name: Go
-default_uri: /go/syscall
-[node]
-name: NodeJS
-default_uri: /nodejs/assert
-[nginx]
-name: Nginx
-default_uri: /nginx/guide/beginner’s_guide
-[requirejs]
-name: RequireJS
-default_uri: /requirejs/commonjs_notes
-[markdown]
-name: MarkDown
-default_uri: /markdown/index#philosophy
+[cordova]
+name: Apache Cordova
+default_uri: /apache-cordova/overview
+[css]
+name: CSS
+default_uri: /css/universal_selectors
+[dom]
+name: DOM
+default_uri: /dom/document
+[dom_events]
+name: DOM Events
+default_uri: /dom_events/click
+[git]
+name: Git
+default_uri: /git/git
 [grunt]
 name: Grunt
 default_uri: /grunt/configuring-tasks
-[less]
-name: Less
-default_uri: /less/functions#misc-functions-data-uri
-[phpunit]
-name: PHPUnit
-default_uri: /phpunit/code-coverage-analysis
-[redis]
-name: Redis
-default_uri: /redis/config-set
-[sass]
-name: Sass
-default_uri: /sass/index#list_operations
-[haskell]
-name: Haskell
-default_uri: /haskell/list
-[yii]
-name: Yii
-default_uri: /yii/yii-authclient-baseclient
-[jquery]
-name: JQuery
-default_uri: /jquery/all-selector
-[jqueryui]
-name: JQuery UI
-default_uri: /jqueryui/data-selector
-[jquerymobile]
-name: JQuery Mobile
-default_uri: /jquerymobile/classes
-[mongoosejs]
-name: MongooseJS
-default_uri: /mongoosejs/documents
-[rethinkdb]
-name: RethinkDB
-default_uri: /rethinkdb/config
-[sinon]
-name: SinonJS
-default_uri: /sinonjs/index#assertions
-[python2]
-name: Python2
-default_uri: /python2/
+[html]
+name: HTML
+default_uri: /html/attributes
+[javascript]
+name: JavaScript
+default_uri: /php/classes_and_objects/the_basics
+[nginx]
+name: Nginx
+default_uri: /nginx/guide/beginner’s_guide
+[node]
+name: NodeJS
+default_uri: /nodejs/assert
+[php]
+name: PHP
+default_uri: /php/classes_and_objects
+[postgresql]
+name: PostgreSQL
+default_uri: /postgresql/select
+[react]
+name: React
+default_uri: /react/component-api
+[requirejs]
+name: RequireJS
+default_uri: /requirejs/commonjs_notes
+[svg]
+name: SVG
+default_uri: /svg/element
+[xpath]
+name: XPATH
+default_uri: /xpath/functions
