--- a/lib/docs/db_storage/tests/importer.cfg
+++ b/lib/docs/db_storage/tests/importer.cfg
@@ -7,45 +7,57 @@ DBname: slashdb
 base_path: ../../../public/docs/
 [Config]
 debugMode: True
-[javascript]
-name: JavaScript
-default_uri: /php/classes_and_objects/the_basics
 [bower]
 name: Bower
 default_uri: /bower/creating-packages
+[chai]
+name: Chai
+default_uri: /chai/guide/helpers
+[cordova]
+name: Apache Cordova
+default_uri: /apache-cordova/overview
 [css]
 name: CSS
 default_uri: /css/universal_selectors
-[cordova]
-name: Apache Cordova
-default_uri: /apache-cordova/
 [dom]
 name: DOM
 default_uri: /dom/document
+[dom_events]
+name: DOM Events
+default_uri: /dom_events/click
 [git]
 name: Git
-default_uri: /git/
+default_uri: /git/git
+[grunt]
+name: Grunt
+default_uri: /grunt/configuring-tasks
 [html]
 name: HTML
-default_uri: /html/
+default_uri: /html/attributes
+[javascript]
+name: JavaScript
+default_uri: /php/classes_and_objects/the_basics
 [nginx]
 name: Nginx
-default_uri: /nginx/
+default_uri: /nginx/guide/beginner’s_guide
 [node]
 name: NodeJS
-default_uri: /nodejs/
+default_uri: /nodejs/assert
 [php]
 name: PHP
-default_uri: /php/
+default_uri: /php/classes_and_objects
 [postgresql]
 name: PostgreSQL
-default_uri: /postgresql/
+default_uri: /postgresql/select
 [react]
 name: React
-default_uri: /react/
+default_uri: /react/component-api
+[requirejs]
+name: RequireJS
+default_uri: /requirejs/commonjs_notes
 [svg]
 name: SVG
-default_uri: /svg/
+default_uri: /svg/element
 [xpath]
 name: XPATH
-default_uri: /xpath/
+default_uri: /xpath/functions
