updated active docset

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -19,6 +19,9 @@ default_uri: /apache-cordova/overview
 [css]
 name: CSS
 default_uri: /css/universal_selectors
+[d3]
+name: D3
+default_uri: /d3/namespaces
 [dom]
 name: DOM
 default_uri: /dom/document
@@ -34,9 +37,18 @@ default_uri: /grunt/configuring-tasks
 [html]
 name: HTML
 default_uri: /html/attributes
+[jquery]
+name: JQuery
+default_uri: /jquery/
+[jqueryui]
+name: JQuery UI
+default_uri: /jquery_ui/
+[jquerymobile]
+name: JQuery Mobile
+default_uri: /jquery_mobile/
 [javascript]
 name: JavaScript
-default_uri: /php/classes_and_objects/the_basics
+default_uri: /javascript/statements
 [nginx]
 name: Nginx
 default_uri: /nginx/guide/beginner’s_guide
@@ -59,5 +71,5 @@ default_uri: /requirejs/commonjs_notes
 name: SVG
 default_uri: /svg/element
 [xpath]
-name: XPATH
+name: XPath
 default_uri: /xpath/functions
