--- a/lib/docs/db_storage/tests/importer.cfg
+++ b/lib/docs/db_storage/tests/importer.cfg
@@ -19,6 +19,9 @@ default_uri: /apache-cordova/overview
 [css]
 name: CSS
 default_uri: /css/universal_selectors
+[d3]
+name: D3
+default_uri: /d3/namespaces
 [dom]
 name: DOM
 default_uri: /dom/document
@@ -36,7 +39,7 @@ name: HTML
 default_uri: /html/attributes
 [javascript]
 name: JavaScript
-default_uri: /php/classes_and_objects/the_basics
+default_uri: /javascript/statements
 [nginx]
 name: Nginx
 default_uri: /nginx/guide/beginner’s_guide
@@ -59,5 +62,5 @@ default_uri: /requirejs/commonjs_notes
 name: SVG
 default_uri: /svg/element
 [xpath]
-name: XPATH
+name: XPath
 default_uri: /xpath/functions
