added new tests

--- a/lib/docs/db_storage/tests/importer.cfg
+++ b/lib/docs/db_storage/tests/importer.cfg
@@ -9,7 +9,7 @@ base_path: ../../../public/docs/
 debugMode: True
 [bower]
 name: Bower
-default_uri: /bower/creating-packages
+default_uri: /bower/creating_packages
 [chai]
 name: Chai
 default_uri: /chai/guide/helpers
@@ -37,9 +37,24 @@ default_uri: /grunt/configuring-tasks
 [html]
 name: HTML
 default_uri: /html/attributes
+[jquery]
+name: JQuery
+default_uri: /jquery/
+[jqueryui]
+name: JQuery UI
+default_uri: /jqueryui/color-animation
+[jquerymobile]
+name: JQuery Mobile
+default_uri: /jquerymobile/classes
 [javascript]
 name: JavaScript
 default_uri: /javascript/statements
+[less]
+name: Less
+default_uri: /less/variables
+[markdown]
+name: MarkDown
+default_uri: /markdown/inline_html
 [nginx]
 name: Nginx
 default_uri: /nginx/guide/beginner’s_guide
@@ -58,6 +73,9 @@ default_uri: /react/component-api
 [requirejs]
 name: RequireJS
 default_uri: /requirejs/commonjs_notes
+[sinon]
+name: SinonJS
+default_uri: /sinonjs/
 [svg]
 name: SVG
 default_uri: /svg/element
