--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -28,9 +28,15 @@ default_uri: /dom/document
 [dom_events]
 name: DOM Events
 default_uri: /dom_events/click
+[ember]
+name: EmberJS
+default_uri: /ember/
 [git]
 name: Git
 default_uri: /git/git
+[go]
+name: Go
+default_uri: /go/go_programming_language/community
 [grunt]
 name: Grunt
 default_uri: /grunt/configuring-tasks
@@ -39,7 +45,7 @@ name: HTML
 default_uri: /html/attributes
 [jquery]
 name: JQuery
-default_uri: /jquery/
+default_uri: /jquery/types
 [jqueryui]
 name: JQuery UI
 default_uri: /jqueryui/color-animation
