added new tests for go and ember

--- a/lib/docs/db_storage/tests/importer.cfg
+++ b/lib/docs/db_storage/tests/importer.cfg
@@ -28,6 +28,9 @@ default_uri: /dom/document
 [dom_events]
 name: DOM Events
 default_uri: /dom_events/click
+[ember]
+name: EmberJS
+default_uri: /ember/
 [git]
 name: Git
 default_uri: /git/git
