--- a/lib/docs/db_storage/tests/importer.cfg
+++ b/lib/docs/db_storage/tests/importer.cfg
@@ -31,6 +31,9 @@ default_uri: /dom_events/click
 [ember]
 name: EmberJS
 default_uri: /ember/
+[express]
+name: Express
+default_uri: /express/
 [git]
 name: Git
 default_uri: /git/git
