--- a/lib/docs/db_storage/tests/importer.cfg
+++ b/lib/docs/db_storage/tests/importer.cfg
@@ -7,6 +7,9 @@ DBname: slashdb
 base_path: ../../../public/docs/
 [Config]
 debugMode: True
+[backbone]
+name: BackboneJS
+default_uri: /backbonejs/backbone.$
 [bower]
 name: Bower
 default_uri: /bower/creating_packages
