--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -76,6 +76,9 @@ default_uri: /nodejs/assert
 [php]
 name: PHP
 default_uri: /php/classes_and_objects
+[phpunit]
+name: PHPUnit
+default_uri: /phpunit/
 [postgresql]
 name: PostgreSQL
 default_uri: /postgresql/select
@@ -94,3 +97,6 @@ default_uri: /svg/element
 [xpath]
 name: XPath
 default_uri: /xpath/functions
+[yii]
+name: Yii
+default_uri: /yii/
