--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -94,9 +94,12 @@ default_uri: /sinonjs/
 [svg]
 name: SVG
 default_uri: /svg/element
+[underscore]
+name: UnderscoreJS
+default_uri: /underscorejs/
 [xpath]
 name: XPath
 default_uri: /xpath/functions
 [yii]
 name: Yii
-default_uri: /yii/
+default_uri: /yii/guide-rest-quick-start
