added anchor at the end of the link

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -49,6 +49,9 @@ default_uri: /grunt/configuring-tasks
 [html]
 name: HTML
 default_uri: /html/attributes
+[haskell]
+name: Haskell
+default_uri: /haskell/
 [jquery]
 name: JQuery
 default_uri: /jquery/types
@@ -96,7 +99,7 @@ name: SVG
 default_uri: /svg/element
 [underscore]
 name: UnderscoreJS
-default_uri: /underscorejs/
+default_uri: underscorejs/all
 [xpath]
 name: XPath
 default_uri: /xpath/functions
