added python 2 and 3

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -85,6 +85,12 @@ default_uri: /phpunit/
 [postgresql]
 name: PostgreSQL
 default_uri: /postgresql/select
+[python2]
+name: Python2
+default_uri: /python2/
+[python]
+name: Python3
+default_uri: /python3/
 [react]
 name: React
 default_uri: /react/component-api
