--- a/lib/docs/db_storage/tests/importer.cfg
+++ b/lib/docs/db_storage/tests/importer.cfg
@@ -76,6 +76,12 @@ default_uri: /php/classes_and_objects
 [postgresql]
 name: PostgreSQL
 default_uri: /postgresql/select
+[python2]
+name: Python2
+default_uri: /python2/
+[python]
+name: Python3
+default_uri: /python3/
 [react]
 name: React
 default_uri: /react/component-api
