--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -97,6 +97,9 @@ default_uri: /react/component-api
 [requirejs]
 name: RequireJS
 default_uri: /requirejs/commonjs_notes
+[sass]
+name: Sass
+default_uri: /sass/
 [sinon]
 name: SinonJS
 default_uri: /sinonjs/
