--- a/lib/docs/db_storage/tests/importer.cfg
+++ b/lib/docs/db_storage/tests/importer.cfg
@@ -88,6 +88,12 @@ default_uri: /react/component-api
 [requirejs]
 name: RequireJS
 default_uri: /requirejs/commonjs_notes
+[sass]
+name: Sass
+default_uri: /sass/
+[sass]
+name: Sass
+default_uri: /sass/
 [sinon]
 name: SinonJS
 default_uri: /sinonjs/
