--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -19,6 +19,9 @@ default_uri: /chai/guide/helpers
 [cordova]
 name: Apache Cordova
 default_uri: /apache-cordova/overview
+[cpp]
+name: C++
+default_uri: /cpp/
 [css]
 name: CSS
 default_uri: /css/universal_selectors
@@ -67,6 +70,9 @@ default_uri: /javascript/statements
 [less]
 name: Less
 default_uri: /less/variables
+[lodash]
+name: Lo-Dash
+default_uri: /lodash/
 [markdown]
 name: MarkDown
 default_uri: /markdown/inline_html
