--- a/lib/docs/db_storage/tests/importer.cfg
+++ b/lib/docs/db_storage/tests/importer.cfg
@@ -61,6 +61,9 @@ default_uri: /javascript/statements
 [less]
 name: Less
 default_uri: /less/variables
+[lodash]
+name: Lo-Dash
+default_uri: /lodash/
 [markdown]
 name: MarkDown
 default_uri: /markdown/inline_html
