--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -76,6 +76,9 @@ default_uri: /lodash/
 [markdown]
 name: MarkDown
 default_uri: /markdown/inline_html
+[mongoosejs]
+name: MongooseJS
+default_uri: /mongoosejs/
 [nginx]
 name: Nginx
 default_uri: /nginx/guide/beginner’s_guide
