added socketio tests

--- a/lib/docs/db_storage/tests/importer.cfg
+++ b/lib/docs/db_storage/tests/importer.cfg
@@ -100,6 +100,9 @@ default_uri: /sass/
 [sinon]
 name: SinonJS
 default_uri: /sinonjs/
+[socketio]
+name: SocketIO
+default_uri: /socketio/
 [svg]
 name: SVG
 default_uri: /svg/element
