added exceptions for c++

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -20,7 +20,7 @@ default_uri: /chai/guide/helpers
 name: Apache Cordova
 default_uri: /apache-cordova/overview
 [cpp]
-name: C++
+name: Cpp
 default_uri: /cpp/
 [css]
 name: CSS
