--- a/lib/docs/db_storage/tests/importer.cfg
+++ b/lib/docs/db_storage/tests/importer.cfg
@@ -22,6 +22,9 @@ default_uri: /apache-cordova/overview
 [css]
 name: CSS
 default_uri: /css/universal_selectors
+[cpp]
+name: Cpp
+default_uri: /cpp/
 [d3]
 name: D3
 default_uri: /d3/namespaces
