--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -52,6 +52,9 @@ default_uri: /grunt/configuring-tasks
 [html]
 name: HTML
 default_uri: /html/attributes
+[http]
+name: Http
+default_uri: /http/
 [haskell]
 name: Haskell
 default_uri: /haskell/
