added tests for http

--- a/lib/docs/db_storage/tests/importer.cfg
+++ b/lib/docs/db_storage/tests/importer.cfg
@@ -49,6 +49,9 @@ default_uri: /grunt/configuring-tasks
 [html]
 name: HTML
 default_uri: /html/attributes
+[http]
+name: Http
+default_uri: /http/
 [jquery]
 name: JQuery
 default_uri: /jquery/
