added tests for redis

--- a/lib/docs/db_storage/tests/importer.cfg
+++ b/lib/docs/db_storage/tests/importer.cfg
@@ -79,6 +79,9 @@ default_uri: /nginx/guide/beginner’s_guide
 [node]
 name: NodeJS
 default_uri: /nodejs/assert
+[nokogiri]
+name: Nokogiri
+default_uri: /nokogiri/
 [php]
 name: PHP
 default_uri: /php/classes_and_objects
@@ -94,6 +97,9 @@ default_uri: /python3/
 [react]
 name: React
 default_uri: /react/component-api
+[redis]
+name: Redis
+default_uri: /redis/
 [requirejs]
 name: RequireJS
 default_uri: /requirejs/commonjs_notes
