--- a/lib/docs/db_storage/tests/importer.cfg
+++ b/lib/docs/db_storage/tests/importer.cfg
@@ -13,6 +13,9 @@ default_uri: /backbonejs/backbone.$
 [bower]
 name: Bower
 default_uri: /bower/creating_packages
+[c]
+name: C
+default_uri: /c/
 [chai]
 name: Chai
 default_uri: /chai/guide/helpers
