fixing bug with logging

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -82,6 +82,9 @@ default_uri: /lodash/
 [markdown]
 name: MarkDown
 default_uri: /markdown/inline_html
+[modernizr]
+name: Modernizr
+default_uri: /modernizr/
 [mongoosejs]
 name: MongooseJS
 default_uri: /mongoosejs/
