--- a/lib/docs/db_storage/tests/importer.cfg
+++ b/lib/docs/db_storage/tests/importer.cfg
@@ -74,6 +74,12 @@ default_uri: /less/variables
 name: Lo-Dash
 default_uri: /lodash/
 [markdown]
+[modernizr]
+name: Modernizr
+default_uri: /modernizr/
+[mongoosejs]
+name: MongooseJS
+default_uri: /mongoosejs/
 name: MarkDown
 default_uri: /markdown/inline_html
 [nginx]
