added to the index django and moment

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -31,6 +31,9 @@ default_uri: /css/universal_selectors
 [d3]
 name: D3
 default_uri: /d3/namespaces
+[django]
+name: Django
+default_uri: /django
 [dom]
 name: DOM
 default_uri: /dom/document
@@ -85,6 +88,9 @@ default_uri: /markdown/inline_html
 [modernizr]
 name: Modernizr
 default_uri: /modernizr/
+[moment]
+name: Moment
+default_uri: /moment/
 [mongoosejs]
 name: MongooseJS
 default_uri: /mongoosejs/
