added coffeescript docset

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -19,6 +19,9 @@ default_uri: /c/
 [chai]
 name: Chai
 default_uri: /chai/guide/helpers
+[coffeescript]
+name: CoffeeScript
+default_uri: /coffeescript
 [cordova]
 name: Apache Cordova
 default_uri: /apache-cordova/overview
