--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -79,9 +79,15 @@ default_uri: /jquerymobile/classes
 [javascript]
 name: JavaScript
 default_uri: /javascript/statements
+[knockout]
+name: KnockOut
+default_uri: /knockout
 [less]
 name: Less
 default_uri: /less/variables
+[laravel]
+name: Laravel
+default_uri: /laravel
 [lodash]
 name: Lo-Dash
 default_uri: /lodash/
