added marionette docset

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -91,6 +91,9 @@ default_uri: /laravel
 [lodash]
 name: Lo-Dash
 default_uri: /lodash/
+[marionette]
+name: Marionette
+default_uri: /marionette/
 [markdown]
 name: MarkDown
 default_uri: /markdown/inline_html
