added maxcdn docset

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -97,6 +97,9 @@ default_uri: /marionette/
 [markdown]
 name: MarkDown
 default_uri: /markdown/inline_html
+[maxcdn]
+name: MaxCDN
+default_uri: /maxcdn/
 [modernizr]
 name: Modernizr
 default_uri: /modernizr/
