--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -7,6 +7,9 @@ DBname: slashdb
 base_path: ../../../public/docs/
 [Config]
 debugMode: True
+[angular]
+name: AngularJS
+default_uri: /angular/
 [backbone]
 name: BackboneJS
 default_uri: /backbonejs/backbone.$
@@ -139,6 +142,12 @@ default_uri: /redis/
 [requirejs]
 name: RequireJS
 default_uri: /requirejs/commonjs_notes
+[rethinkdb]
+name: RethinkDB
+default_uri: /rethinkdb/
+[ruby]
+name: Ruby
+default_uri: /ruby/
 [sass]
 name: Sass
 default_uri: /sass/
