added rails docset

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -133,6 +133,9 @@ default_uri: /python2/
 [python]
 name: Python3
 default_uri: /python3/
+[rails]
+name: Rails
+default_uri: /rails/
 [react]
 name: React
 default_uri: /react/component-api
