added Nokogiri docset

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -118,6 +118,9 @@ default_uri: /nginx/guide/beginner’s_guide
 [node]
 name: NodeJS
 default_uri: /nodejs/assert
+[nokogiri]
+name: Nokogiri
+default_uri: /nokogiri/
 [php]
 name: PHP
 default_uri: /php/classes_and_objects
