added npm docset

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -121,6 +121,9 @@ default_uri: /nodejs/assert
 [nokogiri]
 name: Nokogiri
 default_uri: /nokogiri/
+[npm]
+name: npm
+default_uri: /npm/
 [php]
 name: PHP
 default_uri: /php/classes_and_objects
