removed Maxcdn from docset list

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -100,9 +100,6 @@ default_uri: /marionette/
 [markdown]
 name: MarkDown
 default_uri: /markdown/inline_html
-[maxcdn]
-name: MaxCDN
-default_uri: /maxcdn/
 [modernizr]
 name: Modernizr
 default_uri: /modernizr/
@@ -171,7 +168,7 @@ name: SVG
 default_uri: /svg/element
 [underscore]
 name: UnderscoreJS
-default_uri: underscorejs/all
+default_uri: /underscorejs/all
 [xpath]
 name: XPath
 default_uri: /xpath/functions
