fixed links and references with no title

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -9,7 +9,7 @@ base_path: ../../../public/docs/
 debugMode: True
 [angular]
 name: AngularJS
-default_uri: /angular/
+default_uri: /angularjs/ng
 [backbone]
 name: BackboneJS
 default_uri: /backbonejs/backbone.$
@@ -18,19 +18,19 @@ name: Bower
 default_uri: /bower/creating_packages
 [c]
 name: C
-default_uri: /c/
+default_uri: /c/c_keywords
 [chai]
 name: Chai
-default_uri: /chai/guide/helpers
+default_uri: /chai/api_reference
 [coffeescript]
 name: CoffeeScript
-default_uri: /coffeescript
+default_uri: /coffeescript/index
 [cordova]
 name: Apache Cordova
 default_uri: /apache-cordova/overview
 [cpp]
 name: Cpp
-default_uri: /cpp/
+default_uri: /cpp/c++_language
 [css]
 name: CSS
 default_uri: /css/universal_selectors
@@ -39,7 +39,7 @@ name: D3
 default_uri: /d3/namespaces
 [django]
 name: Django
-default_uri: /django
+default_uri: /django/getting_started
 [dom]
 name: DOM
 default_uri: /dom/document
@@ -48,10 +48,10 @@ name: DOM Events
 default_uri: /dom_events/click
 [ember]
 name: EmberJS
-default_uri: /ember/
+default_uri: /ember/classes/namespace
 [express]
 name: Express
-default_uri: /express/
+default_uri: /express/express
 [git]
 name: Git
 default_uri: /git/git
@@ -60,16 +60,16 @@ name: Go
 default_uri: /go/go_programming_language/community
 [grunt]
 name: Grunt
-default_uri: /grunt/configuring-tasks
+default_uri: /grunt/grunt
 [html]
 name: HTML
-default_uri: /html/attributes
+default_uri: /html/html_attribute_reference
 [http]
 name: Http
-default_uri: /http/
+default_uri: /http/200_ok
 [haskell]
 name: Haskell
-default_uri: /haskell/
+default_uri: /haskell/index
 [jquery]
 name: JQuery
 default_uri: /jquery/types
@@ -81,34 +81,34 @@ name: JQuery Mobile
 default_uri: /jquerymobile/classes
 [javascript]
 name: JavaScript
-default_uri: /javascript/statements
+default_uri: /javascript/statements_and_declarations
 [knockout]
 name: KnockOut
-default_uri: /knockout
+default_uri: /knockout/knockout.js
 [less]
 name: Less
-default_uri: /less/variables
+default_uri: /less/misc_functions
 [laravel]
 name: Laravel
-default_uri: /laravel
+default_uri: /laravel/namespaces
 [lodash]
 name: Lo-Dash
-default_uri: /lodash/
+default_uri: /lodash/_
 [marionette]
 name: Marionette
-default_uri: /marionette/
+default_uri: /marionette/api
 [markdown]
 name: MarkDown
 default_uri: /markdown/inline_html
 [modernizr]
 name: Modernizr
-default_uri: /modernizr/
+default_uri: /modernizr/index
 [moment]
 name: Moment
-default_uri: /moment/
+default_uri: /moment/index
 [mongoosejs]
 name: MongooseJS
-default_uri: /mongoosejs/
+default_uri: /mongoosejs/api
 [nginx]
 name: Nginx
 default_uri: /nginx/guide/beginner’s_guide
@@ -117,55 +117,55 @@ name: NodeJS
 default_uri: /nodejs/assert
 [nokogiri]
 name: Nokogiri
-default_uri: /nokogiri/
+default_uri: /nokogiri/top_level_namespace
 [npm]
 name: npm
-default_uri: /npm/
+default_uri: /npm/faq
 [php]
 name: PHP
 default_uri: /php/classes_and_objects
 [phpunit]
 name: PHPUnit
-default_uri: /phpunit/
+default_uri: /phpunit/phpunit_and_selenium
 [postgresql]
 name: PostgreSQL
 default_uri: /postgresql/select
 [python2]
 name: Python2
-default_uri: /python2/
+default_uri: /python2/keyword
 [python]
 name: Python3
-default_uri: /python3/
+default_uri: /python3/abc
 [rails]
 name: Rails
-default_uri: /rails/
+default_uri: /rails/rails
 [react]
 name: React
-default_uri: /react/component-api
+default_uri: /react/thinking_in_react
 [redis]
 name: Redis
-default_uri: /redis/
+default_uri: /redis/index
 [requirejs]
 name: RequireJS
 default_uri: /requirejs/commonjs_notes
 [rethinkdb]
 name: RethinkDB
-default_uri: /rethinkdb/
+default_uri: /rethinkdb/index_list
 [ruby]
 name: Ruby
-default_uri: /ruby/
+default_uri: /ruby/class
 [sass]
 name: Sass
-default_uri: /sass/
+default_uri: /sass/list_functions
 [sinon]
 name: SinonJS
-default_uri: /sinonjs/
+default_uri: /sinonjs/spiapi
 [socketio]
 name: SocketIO
-default_uri: /socketio/
+default_uri: /socketio/client_api
 [svg]
 name: SVG
-default_uri: /svg/element
+default_uri: /svg/index
 [underscore]
 name: UnderscoreJS
 default_uri: /underscorejs/all
@@ -174,4 +174,4 @@ name: XPath
 default_uri: /xpath/functions
 [yii]
 name: Yii
-default_uri: /yii/guide-rest-quick-start
+default_uri: /yii/quick_start
