--- a/lib/docs/db_storage/tests/importer.cfg
+++ b/lib/docs/db_storage/tests/importer.cfg
@@ -105,7 +105,7 @@ name: Python3
 default_uri: /python3/
 [react]
 name: React
-default_uri: /react/component-api
+default_uri: /react/getting-started
 [redis]
 name: Redis
 default_uri: /redis/
