fixed links with anchors in Go

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -171,7 +171,7 @@ name: UnderscoreJS
 default_uri: /underscorejs/all
 [xpath]
 name: XPath
-default_uri: /xpath/functions
+default_uri: /xpath/index
 [yii]
 name: Yii
 default_uri: /yii/quick_start
