modified mongoose root url

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -108,7 +108,7 @@ name: Moment
 default_uri: /moment/index
 [mongoosejs]
 name: MongooseJS
-default_uri: /mongoosejs/api
+default_uri: /mongoosejs/index
 [nginx]
 name: Nginx
 default_uri: /nginx/guide/beginner’s_guide
