added field parsed_name to docset

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -9,169 +9,225 @@ base_path: ../../../public/docs/
 debugMode: True
 [angular]
 name: AngularJS
+parsed_name: angularjs
 default_uri: /angularjs/ng
 [backbone]
 name: BackboneJS
+parsed_name: backbonejs
 default_uri: /backbonejs/backbone.$
 [bower]
 name: Bower
+parsed_name: bower
 default_uri: /bower/creating_packages
 [c]
 name: C
+parsed_name: c
 default_uri: /c/c_keywords
 [chai]
 name: Chai
+parsed_name: chai
 default_uri: /chai/api_reference
 [coffeescript]
 name: CoffeeScript
+parsed_name: coffeescript
 default_uri: /coffeescript/index
 [cordova]
 name: Apache Cordova
+parsed_name: apache_cordova
 default_uri: /apache-cordova/overview
 [cpp]
 name: Cpp
+parsed_name: cpp
 default_uri: /cpp/c++_language
 [css]
 name: CSS
+parsed_name: css
 default_uri: /css/universal_selectors
 [d3]
 name: D3
+parsed_name: d3
 default_uri: /d3/namespaces
 [django]
 name: Django
+parsed_name: django
 default_uri: /django/getting_started
 [dom]
 name: DOM
+parsed_name: dom
 default_uri: /dom/document
 [dom_events]
 name: DOM Events
+parsed_name: dom_events
 default_uri: /dom_events/click
 [ember]
 name: EmberJS
+parsed_name: emberjs
 default_uri: /ember/classes/namespace
 [express]
 name: Express
+parsed_name: express
 default_uri: /express/express
 [git]
 name: Git
+parsed_name: git
 default_uri: /git/git
 [go]
 name: Go
+parsed_name: go
 default_uri: /go/go_programming_language/community
 [grunt]
 name: Grunt
+parsed_name: grunt
 default_uri: /grunt/grunt
 [html]
 name: HTML
+parsed_name: html
 default_uri: /html/html_attribute_reference
 [http]
 name: Http
+parsed_name: http
 default_uri: /http/200_ok
 [haskell]
 name: Haskell
+parsed_name: haskell
 default_uri: /haskell/index
 [jquery]
 name: JQuery
+parsed_name: jquery
 default_uri: /jquery/types
 [jqueryui]
 name: JQuery UI
+parsed_name: jquery_ui
 default_uri: /jqueryui/color-animation
 [jquerymobile]
 name: JQuery Mobile
+parsed_name: jquery_mobile
 default_uri: /jquerymobile/classes
 [javascript]
 name: JavaScript
+parsed_name: javascript
 default_uri: /javascript/statements_and_declarations
 [knockout]
 name: KnockOut
+parsed_name: knockout
 default_uri: /knockout/knockout.js
 [less]
 name: Less
+parsed_name: less
 default_uri: /less/misc_functions
 [laravel]
 name: Laravel
+parsed_name: laravel
 default_uri: /laravel/namespaces
 [lodash]
 name: Lo-Dash
+parsed_name: lodash
 default_uri: /lodash/_
 [marionette]
 name: Marionette
+parsed_name: marionette
 default_uri: /marionette/api
 [markdown]
 name: MarkDown
+parsed_name: markdown
 default_uri: /markdown/inline_html
 [modernizr]
 name: Modernizr
+parsed_name: modernizr
 default_uri: /modernizr/index
 [moment]
 name: Moment
+parsed_name: moment
 default_uri: /moment/index
 [mongoosejs]
 name: MongooseJS
+parsed_name: mongoosejs
 default_uri: /mongoosejs/index
 [nginx]
 name: Nginx
+parsed_name: nginx
 default_uri: /nginx/guide/beginner’s_guide
 [node]
 name: NodeJS
+parsed_name: node
 default_uri: /nodejs/assert
 [nokogiri]
+parsed_name: nokogiri
 name: Nokogiri
 default_uri: /nokogiri/top_level_namespace
 [npm]
 name: npm
+parsed_name: npm
 default_uri: /npm/faq
 [php]
 name: PHP
+parsed_name: php
 default_uri: /php/classes_and_objects
 [phpunit]
 name: PHPUnit
+parsed_name: phpunit
 default_uri: /phpunit/phpunit_and_selenium
 [postgresql]
 name: PostgreSQL
+parsed_name: postgresql
 default_uri: /postgresql/select
 [python2]
 name: Python2
+parsed_name: python2
 default_uri: /python2/keyword
 [python]
 name: Python3
+parsed_name: python3
 default_uri: /python3/abc
 [rails]
 name: Rails
+parsed_name: rails
 default_uri: /rails/rails
 [react]
 name: React
+parsed_name: react
 default_uri: /react/thinking_in_react
 [redis]
 name: Redis
+parsed_name: redis
 default_uri: /redis/index
 [requirejs]
 name: RequireJS
+parsed_name: requirejs
 default_uri: /requirejs/commonjs_notes
 [rethinkdb]
 name: RethinkDB
+parsed_name: rethinkdb
 default_uri: /rethinkdb/index_list
 [ruby]
 name: Ruby
+parsed_name: ruby
 default_uri: /ruby/class
 [sass]
 name: Sass
+parsed_name: sass
 default_uri: /sass/list_functions
 [sinon]
 name: SinonJS
+parsed_name: sinonjs
 default_uri: /sinonjs/spiapi
 [socketio]
 name: SocketIO
+parsed_name: socketio
 default_uri: /socketio/client_api
 [svg]
 name: SVG
+parsed_name: svg
 default_uri: /svg/index
 [underscore]
 name: UnderscoreJS
+parsed_name: underscorejs
 default_uri: /underscorejs/all
 [xpath]
 name: XPath
+parsed_name: xpath
 default_uri: /xpath/index
 [yii]
 name: Yii
+parsed_name: yii
 default_uri: /yii/quick_start
