added Apache, Clojure, Drupal and Lua

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -11,6 +11,10 @@ debugMode: True
 name: AngularJS
 parsed_name: angularjs
 default_uri: /angularjs/ng
+[apache]
+name: Apache
+parsed_name: apache
+default_uri: /apache/core
 [backbone]
 name: BackboneJS
 parsed_name: backbonejs
@@ -27,6 +31,10 @@ default_uri: /c/c_keywords
 name: Chai
 parsed_name: chai
 default_uri: /chai/api_reference
+[clojure]
+name: Clojure
+parsed_name: clojure
+default_uri: /clojure/clojure.core
 [coffeescript]
 name: CoffeeScript
 parsed_name: coffeescript
@@ -59,6 +67,10 @@ default_uri: /dom/document
 name: DOM Events
 parsed_name: dom_events
 default_uri: /dom_events/click
+[drupal]
+name: Drupal
+parsed_name: drupal
+default_uri: /drupal
 [ember]
 name: EmberJS
 parsed_name: emberjs
@@ -123,6 +135,10 @@ default_uri: /laravel/namespaces
 name: Lo-Dash
 parsed_name: lodash
 default_uri: /lodash/_
+[lua]
+name: Lua
+parsed_name: lua
+default_uri: /lua
 [marionette]
 name: Marionette
 parsed_name: marionette
